# fragments

./: .gitignore  ContStateList.hs  ExcScope.hs  ExcScopeW.hs  IterConj.hs  IxContStateList.hs  IxContW.hs  IxPrelude.hs  IxPreludeW.hs  MaxMax.hs  Model.hs  ModelW.hs  README.md  RecVP.hs  RelDefs.hs  Wco_dyn_scope.hs  bras-groote.hs  brasoveanu.hs  bumford-barker-2013.hs  cont-state-list.hs  every.hs  preamble.tex  rcs.cabal  relsup-notes.md  relsup.tex  s-d_examples.txt  same-diff-index.hs  same-diff.hs  same-diff_examples.txt  same-groote.hs  shapes.tex  stack.yaml
Control/Monad/: IndexedExtras.hs  IxExtras.hs
Control/Monad/Indexed/: Cont.hs
Data/Functor/: Indexed.hs
ExcScope/: IxPrelude.hs  Model.hs  WModel.hs
Model/: ModelW.hs
app/: Main.hs
assoc-dist/: README.txt  bumford-barker-2013.hs  s-d-i_examples.txt  same-diff-index.hs
charlow-diss/: tags
diss/split-defs/: split-defs.cabal
diss/split-defs/src/: SplitDefs.hs
doc/: doc.tex
doc/figures/: doc-figure1.md5  doc-figure10.md5  doc-figure11.md5  doc-figure13.md5  doc-figure2.md5  doc-figure3.md5  doc-figure4.md5  doc-figure6.md5  doc-figure7.md5  doc-figure8.md5  doc-figure9.md5
pcdrt/: LICENSE  pcdrt.cabal  stack.yaml
pcdrt/app/: Main.hs
pcdrt/src/: PCDRT.hs  Padded.hs
split-defs/: stack.yaml
split-defs/haddock-est/: SplitDefs.hs  haddock-est.cabal
split-defs/haddock-est/Control/Monad/: IxExtras.hs
split-defs/haddock-est/app/: Main.hs
split-defs/haddock-est/src/: Grammar.hs  SplitDefs.hs
split-defs/rel-clauses/: LICENSE
split-defs/rel-clauses/doc/: doc.tex
split-defs/rel-clauses/doc/figures/: doc-figure12.md5  doc-figure14.md5  doc-figure15.md5  doc-figure5.md5
split-defs/rel-clauses/src/: Fragment.hs  RelClauses.hs
split-defs/sd-postsups/: RelDefs.hs  notes.md  preamble.tex
split-defs/split-focus/: RelDefsFoc.hs
split-scope-diss/postsups/: relsup.tex
split-scope-diss/rel-clauses/: rel-clauses.cabal
split-scope-diss/rel-clauses/app/: Main.hs
split-scope-diss/rel-clauses/doc/figures/: doc-figure0.md5
split-scope-diss/split-defs/: stack.yaml
split-scope-diss/split-defs/app/: Main.hs  Main.ipynb
split-scope-diss/split-defs/src/: Grammar.hs  Grammar.ipynb  SplitDefs.hs  SplitDefs.ipynb
src/: Fragment.hs  IxCont.hs
test-models/: Model.hs
