name:                pcdrt
version:             0.1.0.0
homepage:            https://github.com/dylnb/fragments/pcdrt
license:             BSD3
license-file:        LICENSE
author:              dylan
maintainer:          dbumford@gmail.com
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PCDRT
                     , Padded
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable pcdrt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pcdrt
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dylnb/fragments/pcdrt
