name:                split-defs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/dylnb/fragments/diss/split-defs
license:             BSD3
author:              Dylan Bumford
maintainer:          dbumford@ucla.edu
copyright:           2017 Dylan Bumford
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SplitDefs
                     , Grammar
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , extra
                     , indexed
  default-language:    Haskell2010

executable split-defs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , split-defs
                     , mtl
                     , extra
                     , indexed
  default-language:    Haskell2010
