name:                rel-clauses
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/dylnb/fragments
license:             BSD3
author:              Dylan Bumford
maintainer:          dbumford@gmail.com
copyright:           2016 Dylan Bumford
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RelClauses
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , extra
                     , indexed
                     , haddock-est
  default-language:    Haskell2010

executable rel-clauses-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rel-clauses
                     , mtl
                     , extra
                     , indexed
                     , haddock-est
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dylnb/fragments
